chore: DocSearch text contrast fix

--- a/src/css/light-mode.scss
+++ b/src/css/light-mode.scss
@@ -17,7 +17,7 @@ html[data-theme="light"] {
   --ifm-breadcrumb-item-background-active: var(--ifm-menu-color-background-active);
   --ifm-toc-link-color: var(--ifm-font-color-base);
   --ifm-tabs-color: #6a7494;
-  --docsearch-muted-color: #6a7494;
+  --docsearch-muted-color: #59617b;
   --ifm-menu-color-background-hover: var(--ifm-menu-color-background-active);
   --ifm-color-success-contrast-background: #e5f4e8;
   --ifm-color-success-contrast-foreground: #545f7e;
